--- a/src/main/resources/static/web/style/style.css
+++ b/src/main/resources/static/web/style/style.css
@@ -1,63 +1,108 @@
-body{
-    height: 100vh;
-    background-image: url("../images/background.jpg");
-      
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    
+body {
+  height: 100vh;
+  background-color: #77aa77;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 2 1'%3E%3Cdefs%3E%3ClinearGradient id='a' gradientUnits='userSpaceOnUse' x1='0' x2='0' y1='0' y2='1'%3E%3Cstop offset='0' stop-color='%2377aa77'/%3E%3Cstop offset='1' stop-color='%234fd'/%3E%3C/linearGradient%3E%3ClinearGradient id='b' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='0' y2='1'%3E%3Cstop offset='0' stop-color='%23cf8' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23cf8' stop-opacity='1'/%3E%3C/linearGradient%3E%3ClinearGradient id='c' gradientUnits='userSpaceOnUse' x1='0' y1='0' x2='2' y2='2'%3E%3Cstop offset='0' stop-color='%23cf8' stop-opacity='0'/%3E%3Cstop offset='1' stop-color='%23cf8' stop-opacity='1'/%3E%3C/linearGradient%3E%3C/defs%3E%3Crect x='0' y='0' fill='url(%23a)' width='2' height='1'/%3E%3Cg fill-opacity='0.5'%3E%3Cpolygon fill='url(%23b)' points='0 1 0 0 2 0'/%3E%3Cpolygon fill='url(%23c)' points='2 1 2 0 0 0'/%3E%3C/g%3E%3C/svg%3E");
+  background-attachment: fixed;
+  background-size: cover;
 }
 
-header{
-    background-color: #4f0769;
+header {
+  background-color: #4f0769;
 }
 
-main{
-    padding: 2rem;
+main {
+  padding: 2rem;
 }
 
 /*Form style*/
 
-form{
-    color: black;
-    background-color: #d8e2dc;
-    padding: 1rem;
-    border-radius: 0.5rem;
+form {
+  color: black;
+  background-color: #d8e2dc;
+  padding: 1rem;
+  border-radius: 0.5rem;
 }
 
-.btn{
-    background-color: #4f0769;
+.btn {
+  background-color: #4f0769;
+  border: #4f0769;
 }
 
-.btn:hover{
-    background-color: #505699;  
+.btn:hover {
+  background-color: #505699;
+  border: #505699;
 }
 
-.animated-button{
-    background-color: cadetblue;
-    border-radius: 15px;
-    width: 10rem;
-    height: 2rem;
+.animated-button {
+  background-color: cadetblue;
+  border-radius: 15px;
+  width: 10rem;
+  height: 2rem;
 }
 
-.animated-button:hover{
-    background-color: rgb(182, 18, 18);
+.animated-button:hover {
+  background-color: rgb(182, 18, 18);
+  color: white;
+}
+
+.logo {
+  width: 5rem;
+}
+
+#json {
+  background-color: #006d77;
+}
+
+footer {
+  background-color: #4f0769;
+  min-height: 10vh;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+.network-img {
+  width: 2.5rem;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Fira Sans", sans-serif;
+  font-family: "Roboto Slab", serif;
+}
+
+
+/*Config dark mode*/
+body.dark-mode {
+    background-color: #330033;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23404' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23505'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
+  color: white;
+}
+
+form.dark-form {
+    color: white;
+    background-color: #102b3f;
+}
+
+/* .button-add.dark-button{
+    background-color: darkkhaki;
+    color: #102b3f;
+}
+
+.button-add.dark-button:hover{
+    background-color: #102b3f;
+    color: white;
+} */
+
+#bg-dark{
+    background-color: #102b3f;
     color: white;
 }
 
-.logo{
-    width: 5rem;
+#bg-dark:hover{
+    background-color: #0c6bb4;
+    color: white;
 }
 
-footer{
-    background-color: #4f0769;
-    min-height: 10vh;
-}
-
-footer a{
- text-decoration: none;
-}
-
-.network-img{
-    width: 2.5rem;
-}
